--- a/src/main/resources/templates/freeBoard/editContent.html
+++ b/src/main/resources/templates/freeBoard/editContent.html
@@ -9,7 +9,13 @@
 
 <div layout:fragment="content" class="AllNewContent">
     <div>
-        <form role="form" method="post" th:object="${freeBoard}" class="AllNewContent-form">
+        <form role="form" method="post" th:object="${freeBoard}" class="AllNewContent-form" enctype="multipart/form-data">
+
+            <div>
+                <!-- 파일 업로드 입력 필드 -->
+                이미지 : <input type="file" th:field="${freeBoardFormDto.attachFile}" accept="image/*">
+            </div>
+
             <!-- 제목 입력란 -->
             <div class="AllNewContent-input">
                 <span class="Input-Title">제목</span>
