--- a/src/main/resources/templates/freeBoard/newContent.html
+++ b/src/main/resources/templates/freeBoard/newContent.html
@@ -13,7 +13,7 @@
 
 <!--            첨부파일 등록-->
             <div>
-                이미지 : <input type="file" th:field="*{attachFile}" accept="image/*">
+                이미지 파일 선택 : <input type="file" th:field="*{attachFile}" accept="image/*">
             </div>
             <!-- 제목 입력란 -->
             <div class="AllNewContent-input">
