--- a/src/main/resources/templates/patch/PBContent.html
+++ b/src/main/resources/templates/patch/PBContent.html
@@ -16,7 +16,7 @@
       var token = $("meta[name='_csrf']").attr("content");
       var header = $("meta[name='_csrf_header']").attr("content");
 
-      var url = "/patch/" + patchId + "/delete";
+      var url = "/patch/" + patchId;
 
       $.ajax({
         url      : url,
