--- a/src/main/resources/templates/upBoard/UBContent.html
+++ b/src/main/resources/templates/upBoard/UBContent.html
@@ -16,7 +16,7 @@
             var token = $("meta[name='_csrf']").attr("content");
             var header = $("meta[name='_csrf_header']").attr("content");
 
-            var url = "/upBoard/" + upBoardId + "/delete";
+            var url = "/upBoard/" + upBoardId;
 
             $.ajax({
                 url      : url,
